fixed spacing on contact social icons

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -181,12 +181,13 @@ button.omara {
     font-size: 2rem;
     letter-spacing: .6rem;
   }
-  .contact-wrapper {
-    margin-bottom: .2rem;
-    margin-top: .5rem;
-    font-size: 2rem;
-    .fa {
-      padding: .3rem;
-    }
+}
+
+.contact-wrapper {
+  margin-bottom: .2rem;
+  margin-top: .5rem;
+  font-size: 2rem;
+  .fa {
+    padding: .4rem 2rem;
   }
 }
